Update UHF Server Dist add-on to version 0.2.0, refactor Dockerfile to use a specific base image, enhance run script for improved configuration options, and update README for clarity on usage and settings.

--- a/config.yaml
+++ b/config.yaml
@@ -23,5 +23,11 @@ map:
   - data:rw
 options:
   command: ""
+  port: 8000
+  password: ""
+  enable_commercial_detection: true
 schema:
   command: "str?"
+  port: "int(1,65535)?"
+  password: "str?"
+  enable_commercial_detection: "bool?"
