--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ name: UHF Server Dist (Wrapper)
 slug: uhf_server_dist
 description: Home Assistant add-on wrapper for uhf-server-dist.
 url: https://github.com/fbradyirl/uhf-server-dist-ha-addon
-version: "0.2.1"
+version: "0.3.0"
 arch:
   - aarch64
   - amd64
@@ -23,13 +23,23 @@ map:
   - data:rw
 options:
   command: ""
+  host: "0.0.0.0"
   port: 8000
   password: ""
   enable_commercial_detection: true
   extra_args: ""
+  ffmpeg_path: ""
+  comskip_path: ""
+  db_path: ""
+  log_level: "INFO"
 schema:
   command: "str?"
+  host: "str?"
   port: "int(1,65535)?"
   password: "str?"
   enable_commercial_detection: "bool?"
   extra_args: "str?"
+  ffmpeg_path: "str?"
+  comskip_path: "str?"
+  db_path: "str?"
+  log_level: "str?"
